--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.9.0",
     "sharp": "^0.34.2",
-    "twitter-api-v2": "^1.23.2"
+    "twitter-api-v2": "^1.23.2",
+    "uploadthing": "^7.7.3"
   }
 }
