--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,3 +23,7 @@ jobs:
           API_KEY_SECRET: ${{ secrets.API_KEY_SECRET }}
           OAUTH_TOKEN: ${{ secrets.OAUTH_TOKEN }}
           OAUTH_SECRET: ${{ secrets.OAUTH_SECRET }}
+      - name: Commit and Push Data
+        uses: EndBug/add-and-commit@v9
+        with:
+          default_author: github_actions
